@@ -2,7 +2,7 @@ import Globals
 from Shared.DC.Scripts.Script import Script
 from Shared.DC.Scripts.Bindings import NameAssignments as BaseNameAssignments
 from Products.PythonScripts.PythonScript import PythonScript as BasePythonScript
-from Products.CMFCore.FSPythonScript import FSPythonScript as BaseFSPythonScript
+from Products.CMFCore.FSPythonScript import FSPythonScript as BaseFSPythonScript, bad_func_code
 import sys
 import re
 from zLOG import LOG, ERROR, INFO, PROBLEM
